--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "bugs": {
     "url": "https://github.com/DhuruvSingh/CapstoneJS.git/issues"
   },
-  "homepage": "https://github.com/DhuruvSingh/CapstoneJS.git",
+  "homepage": "https://github.com/DhuruvSingh/CapstoneJS",
   "devDependencies": {
     "@babel/core": "^7.18.13",
     "@babel/preset-env": "^7.18.10",
