--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.31.7",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.0.2",
     "style-loader": "^3.3.1",
